syntax = "proto3";
package com.progetto.grpc;

import 'Drone.proto';

message ElectionRequest {
  uint32 id = 1;
  uint32 electionId = 2;
  uint32 battery = 3;
}

message ElectionResponse {}

message ElectedRequest {
  uint32 id = 1;
  Drone newMaster = 2;
}

message ElectedResponse {}

service ElectionService {
  rpc forwardElection(ElectionRequest) returns (ElectionResponse);
  rpc forwardElected(ElectedRequest) returns (ElectedResponse);
}